--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,9 @@ android.iml
 
 # Cocoapods
 #
+example/node_modules
 example/ios/Pods
+example/yarn.lock
 
 # Ruby
 example/vendor/
@@ -53,6 +55,7 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
+yarn.lock
 
 # BUCK
 buck-out/
