--- a/android/build.gradle
+++ b/android/build.gradle
@@ -65,8 +65,17 @@ android {
 }
 
 repositories {
+  mavenLocal()
+  maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url("$rootDir/../node_modules/react-native/android")
+  }
   mavenCentral()
   google()
+  jcenter()
+  flatDir {
+    dirs 'libs'
+  }
 }
 
 
@@ -75,6 +84,7 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+  implementation files('libs/PosPrinterSDK.jar')
 }
 
 if (isNewArchitectureEnabled()) {
