--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.zywellthermalprinter">
 
+    <application>
+        <service android:name="net.posprinter.service.PosprinterService" />
+        <service android:name="net.posprinter.service.PrinterConnectionsService" />
+    </application>
+
 </manifest>
