--- a/example/package.json
+++ b/example/package.json
@@ -9,14 +9,20 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
+    "@react-native-community/cli": "^11.3.5",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-permissions": "^3.8.3",
+    "react-native-view-shot": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "metro-react-native-babel-preset": "0.73.7",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.7",
+    "@types/metro-config": "^0.76.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "metro-react-native-babel-preset": "0.76.5"
   }
 }
