--- a/example/ios/ZywellThermalPrinterExample/Info.plist
+++ b/example/ios/ZywellThermalPrinterExample/Info.plist
@@ -37,6 +37,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+  <string>To Printer</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
