--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup
+        with:
+          node-version: '18'
 
       - name: Lint files
         run: yarn lint
@@ -31,6 +33,8 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup
+        with:
+          node-version: '18'
 
       - name: Run unit tests
         run: yarn test --maxWorkers=2 --coverage
@@ -59,6 +63,8 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup
+        with:
+          node-version: '18'
 
       - name: Cache turborepo for Android
         uses: actions/cache@v3
@@ -113,6 +119,8 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup
+        with:
+          node-version: '18'
 
       - name: Cache turborepo for iOS
         uses: actions/cache@v3
